--- a/views/index.erb
+++ b/views/index.erb
@@ -72,12 +72,10 @@
                     <div class="test-box"></div> 
                 </div>
 
-                <%# <div class="test-image-container"> %>
                 <div>
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <%#<img src="..." class="d-block w-100" alt="...">%>
                                 <div class="test-image-container">
                                     <div class="test-image">
                                         <img src="images/adult-beard-blur-1212984.jpg" alt="guy smiling">
@@ -92,7 +90,6 @@
                             </div>
 
                             <div class="carousel-item">
-                                <%#<img src="..." class="d-block w-100" alt="...">%>
                                 <div class="test-image-container">
                                     <div class="test-image">
                                         <img src="images/beautiful-beauty-blurred-background-1239291.jpg" alt="guy smiling">
@@ -107,7 +104,6 @@
                             </div>
 
                             <div class="carousel-item">
-                                <%#<img src="..." class="d-block w-100" alt="...">%>
                                 <div class="test-image-container">
                                     <div class="test-image">
                                         <img src="images/beautiful-beauty-blur-814052.jpg" alt="guy smiling">
@@ -130,16 +126,6 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
-
-                    <%#<div class="test-image">
-                        <img src="images/adult-beard-blur-1212984.jpg" alt="guy smiling">
-                    </div>
-
-                    <div class="test-image-text">
-                        <blockquote>
-                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus debitis pariatur dolores aliquid repudiandae animi natus reprehenderit distinctio, ab obcaecati at reiciendis, et incidunt ad saepe facere recusandae accusantium?"
-                        </blockquote>
-                    </div> %>
                 </div>
             </div>
         </div>
@@ -166,6 +152,10 @@
                     </div>
                     <div class="prod-descript">
                         <h3>Baked Butter Cupcake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Receipe</button>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
@@ -174,7 +164,11 @@
                         <img src="images/baked-berry-cake-1055272.jpg" alt="cupake image 2">
                     </div>
                     <div class="prod-descript">
-                        <h3>Baked Raspberry Cupcake</h3>
+                        <h3>Baked Berry Cupcake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Receipe</button>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
@@ -183,7 +177,11 @@
                         <img src="images/baked-berry-cake-1055270.jpg" alt="cupake image 3">
                     </div>
                     <div class="prod-descript">
-                        <h3>Baked Strawberry and Grape Cupcake</h3>
+                        <h3>Baked Fruit Cupcake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Receipe</button>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
@@ -193,6 +191,10 @@
                     </div>
                     <div class="prod-descript">
                         <h3>Baked Butter Cupcake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Receipe</button>
+                        </div>
                     </div>
                 </div>
             </div>
