--- a/public/style.css
+++ b/public/style.css
@@ -20,20 +20,19 @@
     list-style: none;
 }
 
-.top-banner {
+ .top-banner {
     background-color: #5E55C7;
-    padding: 7px;
     display: flex;
+    height: 3.5vh;
 }
 
 .top-banner .top-contacts {
-    display: inline-block;
+    display: flex;
     margin-left: 15px;
 }
 
-.top-banner .top-contacts a {
+.top-banner .top-contacts div {
     color: #EDE3E9;
-    text-decoration: none;
     margin-right: 15px;
     border-right: 1px solid #EDE3E9;
     padding-right: 5px;
@@ -48,19 +47,19 @@
 
 .top-banner .top-search #input-1 {
     border: 1px solid #EDE3E9;
-    border-radius: 2px;
-    padding: 2px;
+    border-radius: 3.5px;
+    height: 85%;
+    padding: 0 5px;
 }
 
 /* -------------------------------------------- */
 
 .hero {
     width: 100%;
-    height: 94vh; 
+    height: 96.5vh; 
     background: url(images/drew-coffman-1872-unsplash.jpg) center center no-repeat;
     background-size: cover;
     display: inline-block;
-    /* border: 1px solid black; */
 }
 
 .hero img {
@@ -85,6 +84,35 @@
     background-color: #5E55C7;
     padding: 10px;
     border-radius: 2px;
+}
+
+.hero .menu-bar .contact-btn {
+    margin: 10px;
+    border: none;
+    color: #EDE3E9;
+    font-weight: bold;
+    background-color: #5E55C7;
+    padding: 7px;
+    border-radius: 2px;
+}
+
+.modal-footer .send-btn {
+    background-color: #5E55C7;
+    border: none;
+    color: #EDE3E9;
+    padding: 6.5px;
+}
+
+.modal-footer .send-btn:hover {
+    background-color: rgb(61, 56, 126);
+}
+
+.modal-footer .close-btn {
+    background-color: #403F4C;
+}
+
+.modal-footer .close-btn:hover {
+    background-color: rgb(40, 39, 48);
 }
 
 .hero h1 {
@@ -444,7 +472,7 @@
     padding: 15px;
 }
 
-.news-sect h2 {
+.news-sect .news-head {
     color: #EDE3E9;
     margin-left: 112px;
     margin-top: 10px;
@@ -452,12 +480,13 @@
     font-weight: bold;
 }
 
-.news-sect form {
-    margin-right: 112px;
+.news-sect div {
+    margin-right: 110px;
     margin-left: auto;
+    /* border: 1px solid black; */
 }
 
-.news-sect form input {
+.news-input {
     padding: 9px 25px;
     border: 1.25px solid #EDE3E9;
     border-top-left-radius: 10px;
@@ -466,7 +495,7 @@
     font-weight: bold;
 }
 
-.news-sect form button {
+.news-btn {
     margin-left: -5px;
     padding: 10px 15px;
     border: none;
@@ -494,7 +523,7 @@ footer .secondary {
 }
 
 footer .secondary .footer-container {
-    height: 75%;
+    height: 85%;
     width: 85%;
     margin: auto;
     display: flex;
