--- a/views/index.erb
+++ b/views/index.erb
@@ -44,30 +44,28 @@
                 <button type="button" class="btn btn-primary contact-btn" data-toggle="modal" data-target="#exampleModal">
                 Contact
                 </button>
-<%#%>
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                        <!-- Change made to header below -->
-                            <div style="background-color: #5E55C7; font-weight: bold; color: #EDE3E9" class="modal-header">
+                        <div id="my-modal" class="modal-content">
+                            <div id="contact-form-head" class="modal-header">
                                 <h5 class="modal-title" id="exampleModalLabel">Tell Us Why You Love Us!</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-                            <form action="" method="get">
                                 <div class="modal-body">
-                                    <input type="text" name="pre-name" placeholder="First Name...">
-                                    <input type="text" name="post-name" placeholder="Last Name...">
-                                    <input type="text" name="subject" placeholder="Subject...">
-                                    <div class="purpose">
-                                        <div>Choose a Reason:</div>
-                                        <li><input type="radio" name="reason-1" id="">&emsp;You Love Us!</li>
-                                        <li><input type="radio" name="reason-1" id="">&emsp;Complaint</li>
-                                        <li><input type="radio" name="reason-1" id="">&emsp;Other</li>
-                                    </div>
-                                    <textarea name="message" id="" cols="30" rows="10" placeholder="Enter Message..."></textarea>
+                                    <form id="modal-form" action="/" method="get">
+                                        <div class="form-group">
+                                            <input id="email-id" class="email-input" type="text" name="email" placeholder="Email...">
+                                        </div>
+                                        <div class="form-group">
+                                            <input id="subject-id" class="subject-input" type="text" name="subject" placeholder="Subject...">
+                                        </div>
+                                        <div class="form-group">
+                                            <textarea id="message-id" class="message-input" name="message" id="" cols="30" rows="10" placeholder="Enter Message..."></textarea>
+                                        </div>
+                                    </form>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary close-btn" data-dismiss="modal">Close</button>
@@ -77,7 +75,6 @@
                         </div>
                     </div>
                 </div>
-<%#%%>
             <h1>Be our guest ... 😉</h1>   
             <img class="down-arrow-header" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
         </div>
@@ -239,7 +236,7 @@
         </div>
 
         <div class="news-sect">
-            <h2 class="news-head">Get New Receipes Weekly!</h2>
+            <h2 class="news-head">Get New Recipes Weekly!</h2>
             <div>
                 <form class="news-form" action="" method="">
                     <input class="news-input" type="text" name="newsletter" placeholder="Enter Email...">
@@ -307,4 +304,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <%# Personal JS Script %>
+    <script>
+        let send_btn = document.querySelector('.send-btn');
+
+        send_btn.addEventListener('click', (event) => {
+            event.preventDefault();
+
+            document.forms['modal-form'].submit();
+        })
+    </script> 
 </html>
