--- a/views/index.erb
+++ b/views/index.erb
@@ -165,7 +165,7 @@
             </div>
         </div>
 
-        <div class="prod-sect">
+        <div class="cupcake-sect">
             <div class="prod-title-container">
                 <div class="prod-box"></div>
                 <h2 class="prod-title">Check Out Our Products!</h2>
@@ -173,10 +173,10 @@
             </div>
 
             <nav class="prod-menu">
-                <a href="#">Cupackes</a>
-                <a href="#">Bread</a>
-                <a href="#">Macaroons</a>
-                <a href="#">Cake</a>
+                <a class="select-cupcake" class="btn-select" href="#">Cupcakes</a>
+                <a class="select-bread" href="#">Bread</a>
+                <a class="select-macaroon" href="#">Macaroons</a>
+                <a class="select-cake" href="#">Cake</a>
             </nav>
 
             <div class="products-container">
@@ -189,7 +189,7 @@
                         <h3>Baked Butter Cupcake</h3>
                         <div class="prod-btns">
                             <button class="btn-1">Add To Cart</button>
-                            <button class="btn-2">Receipe</button>
+                            <button class="btn-2">Recipe</button>
                         </div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                         <h3>Baked Berry Cupcake</h3>
                         <div class="prod-btns">
                             <button class="btn-1">Add To Cart</button>
-                            <button class="btn-2">Receipe</button>
+                            <button class="btn-2">Recipe</button>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                         <h3>Baked Fruit Cupcake</h3>
                         <div class="prod-btns">
                             <button class="btn-1">Add To Cart</button>
-                            <button class="btn-2">Receipe</button>
+                            <button class="btn-2">Recipe</button>
                         </div>
                     </div>
                 </div>
@@ -228,7 +228,218 @@
                         <h3>Baked Butter Cupcake</h3>
                         <div class="prod-btns">
                             <button class="btn-1">Add To Cart</button>
-                            <button class="btn-2">Receipe</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="bread-sect">
+            <div class="prod-title-container">
+                <div class="prod-box"></div>
+                <h2 class="prod-title">Check Out Our Products!</h2>
+                <div class="prod-box"></div> 
+            </div>
+
+            <nav class="prod-menu">
+                <a class="select-cupcake" href="#">Cupcakes</a>
+                <a class="select-bread" class="btn-select" href="#">Bread</a>
+                <a class="select-macaroon" href="#">Macaroons</a>
+                <a class="select-cake" href="#">Cake</a>
+                
+            </nav>
+
+            <div class="products-container">
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/bread-food-olives-62313.jpg" alt="cupake image 1">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Regular Bread</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/bread-food-olives-62313.jpg" alt="cupake image 2">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Regular Bread</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/bread-food-olives-62313.jpg" alt="cupake image 3">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Regular Bread</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/bread-food-olives-62313.jpg" alt="cupake image 1">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Regular Bread</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="macaroon-sect">
+            <div class="prod-title-container">
+                <div class="prod-box"></div>
+                <h2 class="prod-title">Check Out Our Products!</h2>
+                <div class="prod-box"></div> 
+            </div>
+
+            <nav class="prod-menu">
+                <a class="select-cupcake" href="#">Cupcakes</a>
+                <a class="select-bread" href="#">Bread</a>
+                <a class="select-macaroon" class="btn-select" href="#">Macaroons</a>
+                <a class="select-cake" href="#">Cake</a>
+            </nav>
+
+            <div class="products-container">
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/holly-stratton-575383-unsplash.jpg" alt="cupake image 1">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Colored Macaroons</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/holly-stratton-575383-unsplash.jpg" alt="cupake image 2">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Colored Macaroons</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/holly-stratton-575383-unsplash.jpg" alt="cupake image 3">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Colored Macaroons</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/holly-stratton-575383-unsplash.jpg" alt="cupake image 1">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Colored Macaroons</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="cake-sect">
+            <div class="prod-title-container">
+                <div class="prod-box"></div>
+                <h2 class="prod-title">Check Out Our Products!</h2>
+                <div class="prod-box"></div> 
+            </div>
+
+            <nav class="prod-menu">
+                <a class="select-cupcake" href="#">Cupcakes</a>
+                <a class="select-bread" href="#">Bread</a>
+                <a class="select-macaroon" href="#">Macaroons</a>
+                <a class="select-cake" class="btn-select" href="#">Cake</a>
+            </nav>
+
+            <div class="products-container">
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/rawpixel-778734-unsplash.jpg" alt="cupake image 1">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Awesome Cake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/rawpixel-778734-unsplash.jpg" alt="cupake image 2">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Awesome Cake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/rawpixel-778734-unsplash.jpg" alt="cupake image 3">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Awesome Cake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="prod-image">
+                        <p class="prod-price">$25</p>
+                        <img src="images/rawpixel-778734-unsplash.jpg" alt="cupake image 1">
+                    </div>
+                    <div class="prod-descript">
+                        <h3>Awesome Cake</h3>
+                        <div class="prod-btns">
+                            <button class="btn-1">Add To Cart</button>
+                            <button class="btn-2">Recipe</button>
                         </div>
                     </div>
                 </div>
@@ -303,14 +514,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <%# Personal JS Script %>
-    <script>
-        let send_btn = document.querySelector('.send-btn');
-
-        send_btn.addEventListener('click', (event) => {
-            event.preventDefault();
-
-            document.forms['modal-form'].submit();
-        })
-    </script> 
+    <script src="script.js"></script> 
 </html>
