--- a/views/index.erb
+++ b/views/index.erb
@@ -76,11 +76,11 @@
                     </div>
                 </div>
             <h1>Be our guest ... 😉</h1>   
-            <img class="down-arrow-header" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
+            <img id="head-down-arrow" class="down-arrow-header" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon"> 
         </div>
     </header>
 
-    <main>
+    <main id="main-sect">
         <div class="about-sect">
             <div class="about-title-container">
                 <div class="about-box"></div>
@@ -96,7 +96,7 @@
                 </div>
             </div>
 
-            <img class="down-arrow-main" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon">
+            <img id="main-down-arrow" class="down-arrow-main" src="images/arrow-down-sign-to-navigate.svg" alt="down arrow icon">
         </div>
 
         <div class="test-sect">
