--- a/views/index.erb
+++ b/views/index.erb
@@ -449,8 +449,8 @@
         <div class="news-sect">
             <h2 class="news-head">Get New Recipes Weekly!</h2>
             <div>
-                <form class="news-form" action="" method="">
-                    <input class="news-input" type="text" name="newsletter" placeholder="Enter Email...">
+                <form class="news-form" action="/newsletter" method="post">
+                    <input class="news-input" type="text" name="news-email" placeholder="Enter Email...">
                     <button class="news-btn">Enter</button>
                 </form>
             </div>
