--- a/views/index.erb
+++ b/views/index.erb
@@ -37,8 +37,8 @@
         <div class="hero">
             <img src="images/logo_transparent.png" alt="bakery-logo">
             <div class="menu-bar">
-                <a href="#">Shop</a>
-                <a href="#">About</a>
+                <a id="shop-btn" href="#">Shop</a>
+                <a id="about-btn" href="#">About</a>
             
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary contact-btn" data-toggle="modal" data-target="#exampleModal">
